# Design_Patterns

./: .gitignore  CMakeLists.txt  README.md
01_open_closed_principle/: CMakeLists.txt  main.cpp
02_law_of_demeter/: CMakeLists.txt  main.cpp
02_law_of_demeter/include/: AbstractBuilding.h  AbstractMediator.h  BuildingA.h  BuildingB.h  MediatorA.h
02_law_of_demeter/src/: AbstractBuilding.cpp  AbstractMediator.cpp  BuildingA.cpp  BuildingB.cpp  MediatorA.cpp
03_synthetic_reuse_principle/: CMakeLists.txt  main.cpp
03_synthetic_reuse_principle/include/: AbstractCar.h  BMW.h  Person.h  Porsche.h
03_synthetic_reuse_principle/src/: AbstractCar.cpp  BMW.cpp  Person.cpp  Porsche.cpp
04_dependency_inversion_principle/: CMakeLists.txt  PayBankWorker.cpp  main.cpp
04_dependency_inversion_principle/include/: AbstractBankWorker.h  BankWorker.h  PayBankWorker.h  SaveBankWorker.h  TransferBankWorker.h
04_dependency_inversion_principle/src/: AbstractBankWorker.cpp  BankWorker.cpp  SaveBankWorker.cpp  TransferBankWorker.cpp
05_simple_factory_pattern/: Banana.cpp  CMakeLists.txt  FruitFactory.cpp  FruitFactory.h  Pear.h  main.cpp
05_simple_factory_pattern/include/: Apple.h
06_factory_method_pattern/: CMakeLists.txt  main.cpp
06_factory_method_pattern/include/: AbstractFruit.h  AbstractFruitFactory.h  AppleFactory.h  Banana.h  BananaFactory.h  PearFactory.h
06_factory_method_pattern/src/: AbstractFruit.cpp  AbstractFruitFactory.cpp  Apple.cpp  AppleFactory.cpp  BananaFactory.cpp  Pear.cpp  PearFactory.cpp
07_abstract_factory_pattern/: CMakeLists.txt  main.cpp
07_abstract_factory_pattern/include/: AbstractApple.h  AbstractBanana.h  AbstractFactory.h  AbstractPear.h  Apple.h  Banana.h  Factory.h  Pear.h
07_abstract_factory_pattern/src/: AbstractApple.cpp  AbstractBanana.cpp  AbstractFactory.cpp  AbstractPear.cpp  Apple.cpp  Banana.cpp  Factory.cpp  Pear.cpp
