cmake_minimum_required(VERSION 3.21)
project(Design_Patterns)

set(CMAKE_CXX_STANDARD 11)

add_subdirectory(./01_open_closed_principle)
add_subdirectory(./02_law_of_demeter)
add_subdirectory(./03_synthetic_reuse_principle)
add_subdirectory(./04_dependency_inversion_principle)
add_subdirectory(./05_simple_factory_pattern)
add_subdirectory(./06_factory_method_pattern)
